<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.larswerkman.holocolorpicker.ColorPicker
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/colorSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:color_center_radius="0dp"
        app:color_wheel_radius="80dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/discoBallSwitch"
        app:layout_constraintTop_toTopOf="@+id/colorSlider"
        app:layout_constraintBottom_toBottomOf="@+id/colorSlider"
        app:layout_constraintLeft_toLeftOf="@+id/colorSlider"
        app:layout_constraintRight_toRightOf="@+id/colorSlider"/>

</android.support.constraint.ConstraintLayout>